@@ -1,3 +1,8 @@
+2012-09-11 Molnar Karoly <proton7@freemail.hu>
+	* tools/config-help.pl: New tab: "Extended". The colored rows
+          indicate the class to which it belongs to the MCU. In the
+          "RAM map" the tooltip shows the size of the RAM sections.
+
 2012-09-10 Molnar Karoly <proton7@freemail.hu>
 	* tools/config-help.pl: Minor code cleaning.
 
